flex-item-align: stretch should only grow, never shrink https://bugs.webkit.org/show_bug.cgi?id=80882

Reviewed by Ojan Vafai.

Source/WebCore:

New test cases in css3/flexbox/flex-align-stretch.html.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::alignChildren): Move stretch code into a separate function.
(WebCore::RenderFlexibleBox::alignChildStretch): Add an early return if our height is shrinking.
(WebCore):
* rendering/RenderFlexibleBox.h:
(RenderFlexibleBox):

LayoutTests:

* css3/flexbox/child-overflow-expected.html:
* css3/flexbox/child-overflow.html: For cases that overflow the height, we now just overflow rather than reducing the height.
* css3/flexbox/flex-align-stretch-expected.txt:
* css3/flexbox/flex-align-stretch.html: New test cases.


Canonical link: https://commits.webkit.org/98641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111094 268f45cc-cd09-0410-ab3c-d52691b4dbfc